mystyle.css
/* ... */
 
@font-face {
 font-family: st;
 src: url(SFPRODISPLAYMEDIUM.OTF);
}
 
@font-face {
 font-family: araboto;
 
 src: url(Futura\ Extra\ Black\ Condensed\ BT.ttf);
 text-transform: uppercase;
}
 
@font-face {
 font-family: Cera;
 src: url("Fontspring-DEMO-cerapro-regular.otf");
}
 
@font-face {
 font-family: kbd;
 src: url(kbd.ttf);
}
 
@font-face {
 font-family: cursve;
 src: url(Creattion\ Demo.otf);
}
 
@font-face {
 font-family: graffiti-light;
 src: url(SFPRODISPLAYMEDIUM.OTF);
}
 
@font-face {
 font-family: graffiti-bold;
 font-weight: 900;
 src: url(911porschav3bold.ttf);
 text-transform: uppercase;
 
}
 
@font-face {
 font-family: outline;
 src: url();
}
 
@font-face {
 font-family: bold;
 font-weight: 900;
 src: url(Futura\ Extra\ Black\ Condensed\ BT.ttf);
 text-transform: uppercase;
}
 
@font-face {
 font-family: medium;
 src: url(medium.OTF);
}
 
@font-face {
 font-family: thin;
 font-weight: 900;
 src: url(Gotham-Light.otf);
}
 
@font-face {
 font-family: erode;
 font-weight: 900;
 src: url(Futura\ Extra\ Black\ Condensed\ BT.ttf);
 text-transform: uppercase;
}
 
* {
 margin: 0;
 padding: 0;
 box-sizing: border-box;
 font-family: st;
 /* user-select: none; */
 user-zoom: none;
 zoom: 1;
 /* background-color: #262624; */
 /* overflow-x: scroll; */
 -webkit-font-smoothing: antialiased;
 /* For Chrome, Safari, and newer versions of Edge */
 -moz-osx-font-smoothing: grayscale;
 /* For Firefox and older versions of Edge on macOS */
 
 /* cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path d="M16 1C8.271 1 2 7.271 2 15s6.271 14 14 14 14-6.271 14-14S23.729 1 16 1zm0 24c-6.627 0-12-5.373-12-12s5.373-12 12-12 12 5.373 12 12-5.373 12-12 12z"/><path d="M22 11c-.553 0-1 .448-1 1s.447 1 1 1h1.585l-1.293 1.293c-.391.391-.391 1.023 0 1.414.391.391 1.023.391 1.414 0l2-2c.391-.391.391-1.023 0-1.414l-2-2c-.195-.195-.45-.293-.707-.293s-.512.098-.707.293c-.391.391-.391 1.023 0 1.414L22.586 10H21c-.553 0-1 .448-1 1z"/></svg>'), auto; */
 
 
 & a {
  text-decoration: underline;
  -webkit-text-decoration-color: goldenrod;
  text-decoration-color: goldenrod;
  text-decoration-thickness: 2px;
  text-underline-offset: 2px;
 }
 
 
 /* white-space: nowrap; */
 /* font-family:st,-apple-system,BlinkMacSystemFont,"Apple Color Emoji","Segoe UI Emoji"; */
}
 
#circularcursor {
  background-color: var(--alphacol);
  backdrop-filter: blur(12px);
  border:3px solid var(--txtcolinv);    
  height:30px;
  width:30px;
  border-radius:50%;
  -moz-border-radius:50%;
  -webkit-border-radius:50%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 10000000000000000;
  transform: translate(-50%,-50%);
 transform-origin: 0px 0px;
     pointer-events: none;
     transition: transform 0.3s ease-in-out, border 0.5s ease-in-out,border-radius 0.5s ease-in-out,width 0.5s ease-in-out   ;

}

html {
 scroll-behavior: smooth;
 cursor: none;
}
 
/* -webkit-backdrop-filter: blur(10px);
 backdrop-filter: blur(10px);
 background-color: var(--fallback-bg-color);
 } */
 
body {
 margin: 0;
 background: var(--bg-col);
 transition: background 0.5s ease-in-out;
 cursor: none;
 
}
 
* {
 cursor: none;
 scroll-snap-type: mandatory;
}
 
.graffiti-light {
 font-family: graffiti-light;
 text-transform: uppercase;
}
 
.graffiti-bold {
 font-family: graffiti-bold;
 font-stretch: ultra-expanded;
 text-transform: uppercase;
 letter-spacing: 2px;
}
 
.gradient-text {
 color: goldenrod;
 background: linear-gradient(90.18deg, #4f5bd5, #962fbf, #d62976, #fa7e1e, #feda75);
 -webkit-background-clip: text;
 background-clip: text;
}
 
.gradient-accent-gbv {
 background-color: linear-gradient(90.18deg, #60d5c4, #6a9fcb 50.85%, #bb84cc);
}
 
.gradient-text:hover {
 
 transition: all 0.3s ease
}
 
.gradient-text {
 position: relative;
}
 
.gradient-text::before {
 content: '';
 position: absolute;
 top: 0;
 left: 0;
 width: 100%;
 height: 100%;
 z-index: -1;
 background: linear-gradient(90.18deg, #4f5bd5, #962fbf, #d62976, #fa7e1e, #feda75);
 -webkit-background-clip: text;
 background-clip: text;
}
 
.kbd {
 display: inline-block;
 font-family: kbd;
 min-width: 21px;
 padding: 0 4px;
 line-height: 1.5;
 text-align: center;
 background-color: #64646446;
 border: 3px solid #646464;
 border-radius: 6px;
 ;
 color: var(--txtcol);
 
 /* font-family: "Consolas", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
 
 background-repeat: no-repeat;
 background-size: cover;
 transition: all 0.3s ease-in-out;
 
}
 
 
blockquote {
 
 font-size: clamp(19px, 4vw, 100px);
 /* Adjust this value as needed */
 
 
 /*  */
 
}
 
img {
 /* -webkit-filter: drop-shadow(5px 5px 5px #1f1f1f); */
 
 /* This can help with antialiasing for images and SVG graphics */
 
}
 
.wrapped {
 position: relative;
}
 
.wrapped:after {
 content: "";
 display: block;
 width: 100%;
 height: 100%;
 position: absolute;
 top: 0;
 left: 0;
 background-image: url('http://placehold.it/100x100/09f/fff.png');
 background-size: 100px 100px;
 background-position: 30px 30px;
 background-repeat: no-repeat;
 opacity: 0.7;
}
 
cite {
 display: block;
 text-align: right;
 font-family: bold, thin, st, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 margin-top: 1rem;
 font-size: .9rem;
 color: #666666;
 font-style: normal;
}
 
blockquote q {
 font-family: graffiti-bold;
 /* font-size: xxx-large; */
 /* font-style: italic; */
 /* letter-spacing: .1rem; */
}
 
blockquote q span {
 font-family: graffiti-bold;
 will-change: opacity, filter;
 /* font-size: xxx-small; */
 
 
 opacity: 0;
 filter: blur(0px);
}
 
q {
 font-family: graffiti-bold;
 quotes: "“" "”" "‘" "’";
 /* font-size: 400px; */
 
 
}
 
q:before {
 font-family: graffiti-bold;
 content: open-quote;
 margin-right: .8rem;
 /* font-size: xxx-large; */
 
 
}
/* ... */

